<resources>
    <string name="app_name">NorbertusDewaRucci_00000037417_IF570_CL_UTS</string>
    <string name="app_title">SFX Library and Previewer</string>
    <string name="str_profile">Profile</string>
    <string name="str_library">Library</string>

    <string name="profile_full_name">Norbertus Dewa Rucci</string>
    <string name="profile_nim">00000037417</string>
    <string name="profile_class">IF 570 - CL</string>
    <string name="profile_reference">Reference</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="auth_title">LOGIN PAGE</string>
    <string name="auth_input_hint">Enter your name</string>
    <string name="auth_btn_next">Next</string>
    <string name="img_sound">Sound</string>
    <string name="img_delete">Delete</string>
    <string name="library_detail_play">Play SFX</string>

</resources>
